--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
 name=LiquidCrystal_PCF8574
 version=2.2.0
 author=Matthias Hertel
-maintainer=Matthias Hertel <www.mathertel.de>
-sentence=A library for driving LiquidCrystal displays (LCD) by using the I2C bus and an PCF8574 I2C adapter.
-paragraph=This library uses the original Wire library for communication.
+maintainer=Leonhard Baschang (original Matthias Hertel <www.mathertel.de>)
+sentence=A library for driving LiquidCrystal displays (LCD) by using SoftWire I2C and an PCF8574 I2C adapter.
+paragraph=This library uses the SoftWire (https://docs.arduino.cc/libraries/softwire/) library for communication.
 category=Display
-url=https://www.mathertel.de/Arduino/LiquidCrystal_PCF8574.aspx
+url=https://github.com/TGmuk/LiquidCrystal_PCF8574
 architectures=*
+depends=SoftWire
